--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -224,7 +224,7 @@
             </div>
         
         <footer>
-            <p> <i class="fas fa-heart text-danger mx-1"></i></p>
+            <p> <i class="fas text-danger mx-1"> This task assigned by Poultry Sync as part of the pre-interview assessment. </i></p>
         </footer>
     
     </div>
