--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -7,6 +7,7 @@
     <title>Multi-Tenant Order Management System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
     <style>
         :root {
             --primary-color: #2ecc71;      /* اللون الأساسي أخضر */
@@ -192,7 +193,7 @@
             </div>
         </div>
         
-        <div class="row ">
+        <div class="row justify-content-center ">
             <div class="col-md-3">
                 <div class="card text-center">
                     <div class="card-body">
